HUE-6077 [frontend] Fix right panel toggle overlap with the scrollbar

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -136,7 +136,10 @@
   transition: margin 0.2s linear, color 0.5s ease;
 }
 
-.show-right-side-panel,
+.show-right-side-panel {
+  right: 10px;
+}
+
 .hide-left-side-panel {
   right: 4px;
 }
